src/scss/_menu-motion.scss
@use "theme";
@use "utility";

body {
    // start a new stacking context, within which will be .page-scrim-holder and .menu-content
    z-index: 0;
}

$menu-width-mobile: utility.px-to-rem(275px);
$menu-width-medium: utility.px-to-rem(350px);
$duration-menu-open: 500ms;

.page-scrim-holder {
    position: relative;
    z-index: 1;
    right: 0;
    transition: right 500ms;

    &::after {
        content: "";

        // positioned over all the content
        position: absolute;
        z-index: 1;
        top: 0;
        left: 0;
        
        background: rgba(#000, 0.4);
        
        // initially 0 size and transparent
        opacity: 0.0;
        width: 0;
        height: 0;
    
        // transition to this state will fade opacity and once that's done instantly change width & height
        transition: opacity $duration-menu-open,
            width 0ms $duration-menu-open, height 0ms $duration-menu-open;
    }
    
    &.menu-open {
        
        right: $menu-width-mobile;
        @include theme.above-breakpoint("medium") {
            right: $menu-width-medium;
        }
        cursor: pointer;
        transition: right $duration-menu-open;
        
        &::after {
            width: 100%;
            height: 100%;
    
            opacity: 1.0;
    
            // transition to this state instantly changes width & height, and fades opacity
            transition: opacity $duration-menu-open;
        }
    }
}

.page-content {
    height: 100vh;
    overflow: auto;
    background: theme.$page-background;
}

.menu-content {
    z-index: 0;
    height: 100vh;
    overflow: auto;

    position: absolute;
    right: 0;
    top: 0;
    width: $menu-width-mobile;
    @include theme.above-breakpoint("medium") {
        width: $menu-width-medium;
    }
}

